edited API to include blockchain length

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,8 @@
     </div>
 
     <div id="contents">
-        <p>Mining Genesis Block: <span id="mine-hash"></span></p>
+        <p>Blockchain Length: <span id="blockchain-length">0</span></p>
+        <p>Mining Block: <span id="mine-hash">0x0000000000000</span></p>
         <button type="button" class="btn btn-success" id="mine-btn">Mine</button>
     </div>
 
