edited API to include blockchain length

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,9 +13,20 @@
         <p>Created by AK Rai.</p>
     </div>
 
-    <div id="contents">
-        <p>Mining Genesis Block: <span id="mine-hash"></span></p>
-        <button type="button" class="btn btn-success" id="mine-btn">Mine</button>
+    <div class="block-container">
+        <div class="block">
+            <div class="contents">
+                <p>Block #<span>1</span></p>
+                <p>Timestamp: <span>12:47PM on Dec 24th, 2023</span></p>
+                <p>Hash: <span>1</span></p>
+            </div>
+        </div>
     </div>
+
+    <!-- <div id="contents">
+        <p>Blockchain Length: <span id="blockchain-length">0</span></p>
+        <p>Mining Block: <span id="mine-hash">0x0000000000000</span></p>
+        <button type="button" class="btn btn-success" id="mine-btn">Mine</button>
+    </div> -->
 
 </body>
