added iterating block number

--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
     <div class="block-container">
         <div class="block">
             <div class="contents">
-                <p>Block #<span>1</span></p>
+                <p>Block #<span id="number">1</span></p>
                 <p>Timestamp: <span>12:47PM on Dec 24th, 2023</span></p>
                 <p>Hash: <span>0x0000000...0000000</span></p>
             </div>
