edited blockchain class

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,16 +17,16 @@
         <div class="block">
             <div class="contents">
                 <p>Block #<span id="number">1</span></p>
-                <p>Timestamp: <span>12:47PM on Dec 24th, 2023</span></p>
-                <p>Hash: <span>0x0000000...0000000</span></p>
+                <p>Timestamp: <span id="timestamp">12:47PM on Dec 24th, 2023</span></p>
+                <p>Hash: <span id="hash">0x0000000...0000000</span></p>
             </div>
         </div>
     </div>
 
-    <!-- <div id="contents">
+    <div id="contents">
         <p>Blockchain Length: <span id="blockchain-length">0</span></p>
         <p>Mining Block: <span id="mine-hash">0x0000000000000</span></p>
         <button type="button" class="btn btn-success" id="mine-btn">Mine</button>
-    </div> -->
+    </div>
 
 </body>
