--- a/ui/index.html
+++ b/ui/index.html
@@ -14,13 +14,16 @@
         <p>Created by AK Rai.</p>
     </div>
 
-    <div class="block-container">
+    <div id="btn-container">
         <button type="button" class="btn btn-success" id="mine-btn">Mine</button>
-        <div class="block">
+    </div>
+
+    <div class="block-container">
+        <div class="block" style="display: none">
             <div class="contents">
-                <p>Block #<span id="number">1</span></p>
-                <p>Timestamp: <span id="timestamp">12:47PM on Dec 24th, 2023</span></p>
-                <p>Hash: <span id="hash">0x0000000...0000000</span></p>
+                <p>Block #<span id="number"></span></p>
+                <p>Timestamp: <span id="timestamp"></span></p>
+                <p>Hash: <span id="hash"></span></p>
             </div>
         </div>
     </div>
