before ui overhaul

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="block-container">
-        <div class="block" style="display: none">
+        <div class="block" style="display: block">
             <div class="contents">
                 <p>Block #<span id="number"></span></p>
                 <p>Timestamp: <span id="timestamp"></span></p>
