--- a/ui/index.html
+++ b/ui/index.html
@@ -11,19 +11,19 @@
     <div id="header">
         <h1>minicoin</h1>
         <p>A lightweight implementation of the Bitcoin protocol in C++.</p>
-        <p>Created by AK Rai.</p>
+        <p>Created by <a href="https://aykae.com">AK Rai</a>.</p>
     </div>
 
-    <div id="btn-container">
-        <button type="button" class="btn btn-success" id="mine-btn">Mine</button>
+    <div id="prompt">
+        <p>Press 'Enter' to begin mining for minicoins.</p>
     </div>
 
     <div class="block-container">
         <div class="block" style="display: block">
-            <div class="contents">
-                <p>Block #<span id="number"></span></p>
-                <p>Timestamp: <span id="timestamp"></span></p>
-                <p>Hash: <span id="hash"></span></p>
+            <div class="block-contents">
+                <p id="number">Block #2001<span></span></p>
+                <p>Timestamp: <span id="timestamp">September 21, 2001 at 6:12 PM</span></p>
+                <p>Hash: <span id="hash">0x000000...000000</span></p>
             </div>
         </div>
     </div>
