--- a/ui/index.html
+++ b/ui/index.html
@@ -13,19 +13,21 @@
         <p>A lightweight implementation of the Bitcoin protocol in C++.</p>
         <p>Created by <a href="https://aykae.com">AK Rai</a>.</p>
     </div>
-
-    <div id="prompt">
+    <hr style="height:5px; background-color: #C38154; opacity: 15%;">
+    <div class="page-header">
+        <h3>Simple Mining Visualization</h3>
         <p>Press 'Enter' to begin mining for minicoins.</p>
     </div>
 
     <div class="block-container">
         <div class="block" style="display: block">
             <div class="block-contents">
-                <p id="number">Block #2001<span></span></p>
+                <p>Block #<span id="number" style="font-weight: bold;">2001</span></p>
                 <p>Timestamp: <span id="timestamp">September 21, 2001 at 6:12 PM</span></p>
-                <p>Hash: <span id="hash">0x000000...000000</span></p>
+                <p>Hash: <span id="hash">000000...000000</span></p>
             </div>
         </div>
+        <hr id="chain" style="height: 40px; width: 5px; background: #884A39; opacity: 100%;">
     </div>
 
 </body>
