added hash formatting

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <h1>minicoin</h1>
         <p>A lightweight implementation of the Bitcoin protocol in C++.</p>
-        <p>Created by <a href="https://aykae.com">AK Rai</a>.</p>
+        <p>Created by <a href="https://aykae.com" target="_blank">AK Rai</a>.</p>
     </div>
     <hr style="height:5px; background-color: #C38154; opacity: 15%;">
     <div class="page-header">
@@ -20,14 +20,14 @@
     </div>
 
     <div class="block-container">
-        <div class="block" style="display: block">
+        <div class="block" style="display: none">
             <div class="block-contents">
-                <p>Block #<span id="number" style="font-weight: bold;">2001</span></p>
+                <p>Block #<span id="number" style="font-weight: bold;">101</span></p>
                 <p>Timestamp: <span id="timestamp">September 21, 2001 at 6:12 PM</span></p>
                 <p>Hash: <span id="hash">000000...000000</span></p>
             </div>
         </div>
-        <hr id="chain" style="height: 40px; width: 5px; background: #884A39; opacity: 100%;">
+        <hr id="chain">
     </div>
 
 </body>
