added unmined state color

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="block-container">
-        <div class="block" style="display: none">
+        <div class="block block-unmined" style="display: none">
             <div class="block-contents">
                 <p>Block #<span id="number" style="font-weight: bold;">101</span></p>
                 <p>Timestamp: <span id="timestamp">September 21, 2001 at 6:12 PM</span></p>
